<resources>
    <string name="app_name">Job_aid</string>
    <string name="Resume">Resumes</string>
    <string name="createNewResume">Create New Resume +</string>
    <string name="Home">Home</string>
    <string name="Bookmark_btn">Bookmark</string>
    <string name="Resume_btn">Resume</string>
    <string name="Tips_btn">Tips</string>
    <string name="me_btn">me</string>
    <string name="slcTemplate">Select a Template</string>
    <string name="GenerateBtn">Generate</string>
    <string name="generate_btn">Generate</string>
    <string name="Title">Title</string>


    <!--IT21482502-->
    <string name="login">     Login     </string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Name</string>
    <string name="profile">Profile</string>
    <string name="signup_text">Are you new user?  Register !</string>
    <string name="create">     Create     </string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="city">City</string>
    <string name="education">Education</string>

<!--    calculator-->

    <string name="calHeading">Work Hour Calculator</string>
    <string name="calButton">Calculate</string>
    <string name="calValue">Estimated Salary is: </string>
    <string name="salary">Salary per hour</string>
    <string name="noDays">No of worked Days</string>
    <string name="dayHour">Hours worked in a day</string>

</resources>