<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".Resume">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/appBarLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <com.google.android.material.appbar.MaterialToolbar-->
<!--            android:id="@+id/topAppBar"-->
<!--            style="@style/Widget.MaterialComponents.Toolbar.Primary"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->

<!--            android:background="@color/primary_col"-->
<!--            app:navigationIcon="@drawable/baseline_arrow_back_ios_24"-->
<!--            app:title="Resume"-->
<!--            app:titleCentered="true" />-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-58dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/resumeLayoutMarSt"
                android:layout_marginTop="40dp"
                android:text="@string/Resume"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="@dimen/resumeBox"
                android:layout_height="@dimen/resumeBox"
                android:layout_marginStart="@dimen/resumeLayoutMarSt"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/resumeBox"
                android:outlineProvider="bounds"
                android:shadowColor="@color/resumeBox"
                android:text="@string/createNewResume"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="730dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_add_circle_24" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/home_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_home_notclick" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Home"
                        android:textAlignment="center"
                        android:textColor="@color/iconColor"
                        android:textSize="@dimen/BottomNavbarText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bookmark_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_bookmark_notclick" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Bookmark_btn"
                        android:textAlignment="center"
                        android:textColor="@color/iconColor"
                        android:textSize="@dimen/BottomNavText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/resume_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_description_onclick" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Resume_btn"
                        android:textAlignment="center"
                        android:textColor="@color/primary_col"
                        android:textSize="@dimen/BottomNavbarText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tips_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_tips_and_updates_notclick" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Tips_btn"
                        android:textAlignment="center"
                        android:textColor="@color/iconColor"
                        android:textSize="@dimen/BottomNavbarText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/me_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_person_notclick" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/me_btn"
                        android:textAlignment="center"
                        android:textColor="@color/primary_col"
                        android:textSize="@dimen/BottomNavbarText" />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>